[gd_scene load_steps=2 format=3 uid="uid://c6dm5wwlwkg5v"]

[ext_resource type="Script" uid="uid://dvk7opw2n07ad" path="res://tempo_editor.gd" id="1_tckh4"]

[node name="TempoEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tckh4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Minus5" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "-5"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_right = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="EditableValue" type="LineEdit" parent="VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 22
text = "222"
alignment = 2
max_length = 3
expand_to_text_length = true
flat = true

[node name="LabelBPM" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "BPM "

[node name="Plus5" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+5"

[node name="Slider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 20.0
max_value = 320.0
value = 80.0
rounded = true
allow_greater = true
allow_lesser = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Minus5" to="." method="_on_minus_5_pressed"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/EditableValue" to="." method="_on_editable_value_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/EditableValue" to="." method="_on_editable_value_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Plus5" to="." method="_on_plus_5_pressed"]
[connection signal="value_changed" from="VBoxContainer/Slider" to="." method="_on_slider_value_changed"]
